# reth

./: Cargo.toml  clippy.toml  deny.toml  fork.yaml  index.html
.github/assets/: check_wasm.sh
.github/workflows/: bench.yml  book.yml  eth-sync.yml  integration.yml  lint.yml  op-sync.yml  stage.yml  unit.yml
crates/blockchain-tree/: Cargo.toml
crates/blockchain-tree/src/: blockchain_tree.rs  chain.rs
crates/chain-state/: Cargo.toml
crates/chainspec/: Cargo.toml
crates/chainspec/src/: spec.rs
crates/engine/invalid-block-hooks/src/: witness.rs
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/tree/: mod.rs  root.rs
crates/engine/util/src/: reorg.rs
crates/ethereum/consensus/src/: lib.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: execute.rs
crates/ethereum/node/: Cargo.toml
crates/ethereum/payload/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/execution-errors/src/: trie.rs
crates/evm/execution-types/: Cargo.toml
crates/evm/execution-types/src/: execution_outcome.rs
crates/evm/src/: either.rs  execute.rs  noop.rs  test_utils.rs
crates/exex/exex/: Cargo.toml
crates/exex/exex/src/backfill/: job.rs
crates/net/dns/: Cargo.toml
crates/net/eth-wire/src/: capability.rs
crates/net/peers/src/bootnodes/: mod.rs
crates/node/builder/: Cargo.toml
crates/optimism/cli/: Cargo.toml
crates/optimism/evm/src/: execute.rs
crates/optimism/payload/: Cargo.toml
crates/optimism/payload/src/: builder.rs
crates/primitives/: Cargo.toml
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: account.rs
crates/primitives/src/: alloy_compat.rs  receipt.rs
crates/primitives/src/transaction/: compat.rs  mod.rs  tx_type.rs
crates/revm/: Cargo.toml
crates/revm/src/: batch.rs  cached.rs  database.rs  witness.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-eth-api/: Cargo.toml
crates/rpc/rpc-eth-api/src/helpers/: call.rs  pending_block.rs
crates/rpc/rpc-eth-types/: Cargo.toml
crates/rpc/rpc-eth-types/src/: simulate.rs
crates/rpc/rpc/src/: validation.rs
crates/scroll/alloy/consensus/: Cargo.toml
crates/scroll/alloy/consensus/src/: lib.rs
crates/scroll/alloy/consensus/src/transaction/: envelope.rs  l1_message.rs  mod.rs  tx_type.rs  typed.rs
crates/scroll/alloy/network/: Cargo.toml
crates/scroll/alloy/network/src/: lib.rs
crates/scroll/alloy/rpc-types/: Cargo.toml
crates/scroll/alloy/rpc-types/src/: transaction.rs
crates/scroll/chainspec/: Cargo.toml
crates/scroll/chainspec/res/genesis/: sepolia_scroll.json
crates/scroll/chainspec/src/: constants.rs  dev.rs  genesis.rs  lib.rs  scroll.rs  scroll_sepolia.rs
crates/scroll/cli/: Cargo.toml
crates/scroll/cli/src/: args.rs  commands.rs  lib.rs  spec.rs
crates/scroll/consensus/: Cargo.toml
crates/scroll/consensus/src/: curie.rs  lib.rs
crates/scroll/evm/: Cargo.toml
crates/scroll/evm/src/: config.rs  error.rs  execute.rs  lib.rs
crates/scroll/execution/: Cargo.toml
crates/scroll/execution/src/: context.rs  error.rs  finalize.rs  lib.rs  strategy.rs
crates/scroll/hardforks/src/: dev.rs  hardfork.rs  lib.rs
crates/scroll/node/: Cargo.toml
crates/scroll/node/src/: lib.rs  node.rs
crates/scroll/node/src/node/: bmpt.rs  mpt.rs
crates/scroll/primitives/: Cargo.toml
crates/scroll/primitives/src/: account_extension.rs  execution_context.rs  l1_transaction.rs  lib.rs  poseidon.rs
crates/scroll/revm/: Cargo.toml
crates/scroll/revm/src/: lib.rs  test_utils.rs
crates/scroll/revm/src/primitives/: mod.rs
crates/scroll/revm/src/states/: account_info.rs  bundle.rs  bundle_account.rs  changes.rs  mod.rs  reverts.rs
crates/scroll/rpc/: Cargo.toml
crates/scroll/rpc/src/: lib.rs
crates/scroll/rpc/src/eth/: mod.rs
crates/scroll/state-commitment/: Cargo.toml
crates/scroll/state-commitment/src/: account.rs  commitment.rs  key.rs  lib.rs  root.rs  test.rs  test_utils.rs  value.rs
crates/scroll/state-commitment/src/root/: mod.rs  parallel.rs  utils.rs
crates/scroll/state-commitment/tests/: trie.rs
crates/scroll/storage/: Cargo.toml
crates/scroll/storage/src/: lib.rs
crates/scroll/trie/: Cargo.toml  README.md
crates/scroll/trie/src/: branch.rs  extension.rs  hash_builder.rs  key.rs  leaf.rs  lib.rs  sub_tree.rs
crates/stages/stages/src/stages/: execution.rs  hashing_account.rs  mod.rs
crates/static-file/types/src/: lib.rs
crates/storage/db-common/src/: init.rs
crates/storage/db/src/implementation/mdbx/: mod.rs
crates/storage/provider/: Cargo.toml
crates/storage/provider/src/providers/: bundle_state_provider.rs
crates/storage/provider/src/providers/database/: provider.rs
crates/storage/provider/src/providers/state/: historical.rs
crates/storage/provider/src/test_utils/: blocks.rs  mock.rs  noop.rs
crates/storage/provider/src/writer/: mod.rs
crates/storage/storage-api/src/: state.rs  trie.rs
crates/tracing/src/: formatter.rs
crates/transaction-pool/src/: maintain.rs
crates/transaction-pool/src/pool/: best.rs
crates/trie/common/: Cargo.toml
crates/trie/common/src/: account.rs  key.rs  proofs.rs
crates/trie/db/: Cargo.toml
crates/trie/db/src/: state.rs
crates/trie/db/tests/: proof.rs  trie.rs
crates/trie/parallel/: Cargo.toml
crates/trie/parallel/src/: commitment.rs  db.rs  lib.rs  root.rs
crates/trie/trie/: Cargo.toml
crates/trie/trie/benches/: hash_post_state.rs
crates/trie/trie/src/: key.rs  lib.rs  node_iter.rs  proof.rs  state.rs  updates.rs  walker.rs  witness.rs
crates/trie/trie/src/trie_cursor/: subnode.rs
crates/zstd/: Cargo.toml
crates/zstd/src/: bulk.rs  dict.rs  lib.rs
docs/crates/: db.md
docs/design/: goals.md
docs/repo/: layout.md
examples/custom-beacon-withdrawals/: Cargo.toml
examples/custom-beacon-withdrawals/src/: main.rs
testing/ef-tests/src/: models.rs
testing/testing-utils/src/: generators.rs
