[package]
name = "reth-scroll-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
revm.workspace = true

# scroll
reth-scroll-primitives = { workspace = true, optional = true }
reth-scroll-revm.workspace = true

# misc
auto_impl.workspace = true

[features]
scroll = [
    "reth-scroll-primitives",
    "reth-scroll-revm/scroll",
]
test-utils = [
	"reth-scroll-revm/test-utils",
	"revm/test-utils"
]
