[package]
name = "reth-scroll-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true

# revm
revm.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true

# scroll
reth-scroll-consensus.workspace = true
reth-scroll-primitives = { workspace = true, optional = true }
reth-scroll-revm.workspace = true
reth-scroll-storage = { workspace = true, optional = true }

# misc
auto_impl.workspace = true
derive_more.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
scroll = [
	"reth-scroll-primitives",
	"reth-scroll-revm/scroll",
	"reth-scroll-storage/scroll",
	"reth-primitives/scroll",
	"reth-chainspec/scroll",
	"revm/optional_no_base_fee"
]
test-utils = [
	"reth-scroll-revm/test-utils",
	"reth-revm/test-utils"
]