[package]
name = "reth-scroll-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true

#scroll
reth-scroll-primitives.workspace = true

[dev-dependencies]
reth-revm = { workspace = true, features = ["test-utils"] }