[package]
name = "reth-scroll-state-commitment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-consensus = { workspace = true, optional = true}
alloy-primitives.workspace = true
alloy-rlp.workspace = true
reth-execution-errors.workspace = true
reth-trie = { workspace = true }
reth-scroll-execution.workspace = true
reth-primitives.workspace = true
tracing.workspace = true
reth-scroll-trie.workspace = true
reth-scroll-primitives.workspace = true
poseidon-bn254.workspace = true
reth-trie-db.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-primitives-traits = { workspace = true }

# `metrics` feature
reth-metrics = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# zktrie
zktrie_rust = { path = "/Users/f/dev/scroll/zktrie/rs_zktrie", optional = true }
zktrie = { path = "/Users/f/dev/scroll/zktrie", features = ["rs_zktrie"], optional = true }

[dev-dependencies]
reth-scroll-state-commitment = { workspace = true, features = ["test-utils"]}
alloy-consensus.workspace = true
reth-primitives = { workspace = true, features = ["test-utils", "arbitrary"] }
reth-trie = { workspace = true, features = ["test-utils" ] }
reth-trie-common = { workspace = true, features = ["test-utils", "arbitrary"] }
reth-provider = { workspace = true, features = ["test-utils" ] }
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
zktrie_rust = { path = "/Users/f/dev/scroll/zktrie/rs_zktrie" }
zktrie = { path = "/Users/f/dev/scroll/zktrie", features = ["rs_zktrie"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
reth-db-api.workspace = true

[lints]
workspace = true

[features]
scroll = [
    "reth-trie/scroll",
    "reth-primitives-traits/scroll",
    "reth-provider/scroll",
    "reth-trie/scroll"
]
test-utils = [
    "dep:zktrie_rust", 
    "dep:zktrie", 
    "dep:alloy-consensus",
    "reth-db/test-utils",
    "reth-db-api/test-utils",
    "reth-primitives/test-utils",
    "reth-primitives-traits/test-utils",
    "reth-provider/test-utils",
    "reth-scroll-execution/test-utils",
    "reth-scroll-state-commitment/test-utils",
    "reth-trie/test-utils",
    "reth-trie-common/test-utils",
    "reth-trie-db/test-utils"
    ]
metrics = ["reth-metrics", "dep:metrics"]


