[package]
name = "reth-scroll-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true

# reth
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-storage-errors.workspace = true

# scroll
reth-scroll-revm.workspace = true
