[package]
name = "scroll-trie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-trie = { workspace = true, features = ["serde"] }
alloy-primitives.workspace = true
scroll-primitives.workspace = true
tracing.workspace = true
reth-trie.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
hex-literal = "0.4"
proptest-arbitrary-interop.workspace = true

[lints]
workspace = true
