[package]
name = "scroll-alloy-rpc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
scroll-alloy-consensus = { workspace = true, features = ["serde"] }